set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
add_executable(PE_problem001 solution001.cpp)
add_executable(PE_problem002 solution002.cpp)
add_executable(PE_problem003 solution003.cpp)
add_executable(PE_problem004 solution004.cpp)
add_executable(PE_problem005 solution005.cpp)
add_executable(PE_problem006 solution006.cpp)
add_executable(PE_problem007 solution007.cpp)
add_executable(PE_problem008 solution008.cpp)
add_executable(PE_problem009 solution009.cpp)
add_executable(PE_problem010 solution010.cpp)
add_executable(PE_problem011 solution011.cpp)
add_executable(PE_problem012 solution012.cpp)
add_executable(PE_problem013 solution013.cpp)
add_executable(PE_problem014 solution014.cpp)
add_executable(PE_problem015 solution015.cpp)